Bug #9529 Stored Procedures: No Warning on truncation of procedure name during creation.
Submitted: 31 Mar 2005 17:50 Modified: 31 May 2005 19:09
Reporter: Disha
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0.3 Beta OS:Microsoft Windows (Windows 2003)
Assigned to: Bugs System Target Version:

[31 Mar 2005 17:50] Disha
Description:
On creating a stored procedure with name more than 64 characters, the name is truncated
to 64 characters. The procedure is created sucessfully, but a warning is expected so that
the user knows that the procedure name has been truncated.

How to repeat:
1. Delimiter //
2. Drop procedure if exists
sp_1234567890_1234567890_1234567890_1234567890_1234567890_1234567890//
3. Create procedure sp_1234567890_1234567890_1234567890_1234567890_1234567890_1234567890
()
Begin
	Set @x=10;
End//

ACTUAL RESULT:
Procedure creation successful. No warning message.

Expected RESULT:
A warning is exepected stating the procedure name has been truncated.
[31 May 2005 19:25] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/25420