Fixed BUG#9529: Stored Procedures: No Warning on truncation of procedure name                 during creation.   Although it returns an error, consistent with the behaviour for other objects.   (Unclear why we would allow the creation of SPs with truncated names.)

mysql-test/r/sp-error.result:
  New test case for BUG#9529.
mysql-test/t/sp-error.test:
  New test case for BUG#9529.
sql/sp.cc:
  Check SP name length on creation (and drop).
sql/sp.h:
  New status code for bad (too long) name.
sql/sql_parse.cc:
  New status code for bad (too long) name.